# polymarket-bot

./: .env.example  .gitignore  .mcp.json  README.md  polymarket_bot_plan.md  pyproject.toml  risk_config.json  verify_access.py  watchlist.json
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: code-reviewer.md  debug-investigator.md  (+2 more)
docs/: LIVE_MODE_RUNBOOK.md  signal_audit_v0.8.4.md  signal_audit_v0.8.7.md  usdc_onramp_runbook.md
scripts/: audit_signals.py  benchmark_providers.py  clean.py  force_paper_trade.py  install-daily-paper-loop-task.ps1  install-outcome-resolver-task.ps1  run-daily-paper-loop.bat  run-daily-paper-loop.ps1  run-memory-consolidation.bat  run-outcome-resolver.bat  run-outcome-resolver.ps1  run-research-scout.bat  run-synthetic-replay.ps1  run-weekly-promotion.bat  setup_scheduler_windows.ps1
tasks/: lessons.md  project_audit_prompt.md  todo.md
tests/: test_alerting.py  test_analyst_validation.py  test_auth.py  test_calibration.py  test_checklist.py  test_claude_analyst.py  test_cli.py  test_compliance.py  test_dashboard.py  test_data_feed.py  test_executor.py  test_health_and_readiness.py  test_llm_analyst.py  test_main_loop.py  test_market_filter.py  test_network_and_scheduler_health.py  test_news_feed.py  test_outcome_resolver.py  test_paper_loop_scheduler.py  test_paper_metrics.py  test_paper_pnl.py  test_prediction_store.py  test_research.py  test_risk.py  test_risk_engine_v2.py  test_scanner.py  test_smart_money.py  test_synthetic_replay.py  test_telemetry.py  test_usdc_ops.py  test_verify_access.py  test_watchlist.py
(+54 files in other folders)
